rnsc/tests/snapshots/error-parser-package_directive-missing_operand.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that missing operand after .package is detected and reported.
; Expected error: E-005 (identifier or type hint expected)
; The parser should detect that the package name is missing.

.class public MyClass
.package

.class_end
----- STDERR -----
[E-009] Error: unexpected newline where a package name is required
   ╭─[ test_data/rns_integration/error/parser/package_directive/missing_operand.rns:6:1 ]
   │
 6 │ .package
   │ ────┬───│ 
   │     ╰───── the '.package' directive requires a package name as operand
   │         │ 
   │         ╰─ but nothing was provided
   │ 
   │ Help: Provide a package name after the '.package' directive, e.g.:
   │       .package com.example
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-009
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/rns_integration/error/parser/package_directive/missing_operand.rns:5:1 ]
   │
 5 │ .class public MyClass
   │ ───┬──  
   │    ╰──── class 'MyClass' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
not generated
