rnsc/tests/snapshots/error-parser-package_directive-outside_class_before.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that .package directive before .class is detected as unexpected token.
; Expected error: E-006 (unexpected token before class definition)
; The .package directive is only valid inside a class body, not before it.

.package com.example

.class public MyClass
.super java/lang/Object

.class_end
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/rns_integration/error/parser/package_directive/outside_class_before.rns:5:1 ]
   │
 5 │ .package com.example
   │ ────┬───  
   │     ╰───── valid context for .package directive is: 'class body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- JAVAP -----
not generated
